fixed header logo on mobile

--- a/css/styleguide.scss
+++ b/css/styleguide.scss
@@ -281,7 +281,6 @@ body {
   }
 
   em {
-    font-size: 1.4rem;
     line-height: 4rem;
 
     @include media($nav-width) {
